discussion/kv_engine/170541/170541_rev11_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: Remove tasks from custom cpuPool queue on unregister

We just need to clean up the task but we currently do so by
running it, meaning that we must wait for other tasks to
complete first. Instead, remove the tasks from the queue and
tidy them up manually.

Change-Id: Id3f52a07d693d98510ab6b3f918ad4beb1b8721d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-14 08:13:38.000000000
Message: 
Uploaded patch set 11: New patch set was added with same tree, parent, and commit message as Patch Set 10.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-14 08:55:46.000000000
Message: 
Patch Set 11:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15574/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15574/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15574/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17619/ : FAILURE

Timeout of a CTest test [2022-02-14T08:50:16.693Z] 441/441 Test  #90: ep-engine_ep_unit_tests.ExecutorPoolEpEngineTest/FollyExecutorPool ..........................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17619/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14416/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43885/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37001/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5222/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18351/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16391/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25719/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5283/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17313/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
